tests/error/poly_errors/polymorphic_entrypoint_check.err
Error: Invalid check point (at $FILE:8:0)
  | 
6 | 
7 | @guppy
8 | def main(xs: array[int, n]) -> None:
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
9 |     x, _ = xs
  | ^^^^^^^^^^^^^ Function `main` can only be checked if the value of its
  |               generic parameter `n` is known

Guppy compilation failed due to 1 previous error
